# latents-rs

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  MIGRATION_GUIDE.md  Makefile  README.md  compile_errors.txt  docker-compose.yml  migrate.sh  package-lock.json
config/: production.env.template
crates/frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
crates/frontend/src/: App.jsx  Home.jsx  index.css
crates/frontend/src/assets/: loader.webm
crates/frontend/src/components/: AdminPage.jsx  Features.jsx  JoinWaitlistModal.jsx  LandingPage.jsx  Navbar.jsx  WaitlistSuccess.jsx
crates/frontend/src/lib/: ai.js  supabase.js
crates/server/: Cargo.toml
crates/server/migrations/: 20250305000001_create_waitlist.sql  20250305000002_add_name_and_location.sql  20250306000003_add_role.sql  20260325100724_create_ephemeral_feed.sql  20260325124500_placeholder.sql  20260327120000_intelligence_pipeline.sql  20260330090000_add_bullet_summaries_and_cache_user_flags.sql  20260401090000_add_bullet_interactions.sql  20260401100000_add_users_auth_chat_channels.sql  20260401110000_update_articles_schema.sql  20260402130000_add_channel_id_to_articles.sql
crates/server/src/: auth.rs  error.rs  lib.rs  main.rs  state.rs
crates/server/src/config/: mod.rs
crates/server/src/db/: mod.rs  waitlist.rs
crates/server/src/handlers/: feed.rs  health.rs  mod.rs  static_files.rs  waitlist.rs
crates/server/src/models/: feed.rs  mod.rs  waitlist.rs
crates/server/src/services/: feed_service.rs  geolocation.rs  mod.rs
scripts/: dev-backend.sh  dev-frontend.sh  dev.sh  pre-deploy-backup.sh  update-tunnel.sh
systemd/: latents.service
