[workspace]
members = ["crates/server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/latents"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7"

# Web framework (Axum)
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-gzip"] }
hyper = { version = "1.6", features = ["full"] }

# Database (SQLx)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

# Static file embedding
rust-embed = { version = "8.6", features = ["axum", "mime-guess"] }
mime_guess = "2.0"

# Environment & Config
dotenvy = "0.15"
config = "0.15"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.15", features = ["v4", "serde"] }

# HTTP client for geolocation
reqwest = { version = "0.12", features = ["json"] }

# IP extraction
axum-client-ip = "1.0"

# Concurrency & Locking
dashmap = "6.1"

# Redis (optional L1 cache, falls back to in-memory if not configured)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Cache key hashing
md5 = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
