[package]
name = "latents-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
urlencoding.workspace = true

# Static file embedding
rust-embed.workspace = true
mime_guess.workspace = true

# Environment
dotenvy.workspace = true
config.workspace = true

# Validation
validator.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time & UUID
chrono.workspace = true
uuid.workspace = true

# HTTP client for geolocation
reqwest.workspace = true

# IP extraction
axum-client-ip.workspace = true
jsonwebtoken = "10.3.0"

# Concurrency & Locking
dashmap.workspace = true
redis.workspace = true
md5.workspace = true

[lib]
name = "latents_server"
path = "src/lib.rs"

[[bin]]
name = "latents-server"
path = "src/main.rs"
